--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "Shelter animals registration system",
   "author": "Kostiantyn Manko, Dadia Manko, Illia Manko",
-  "private": true,
+  "private": false,
   "scripts": {
     "start": "nodejs ./bin/www"
   },
@@ -30,7 +30,7 @@
     "winston": "*"
   },
   "engines": {
-    "node": "0.8.x",
-    "npm": "1.1.x"
+    "node": "0.8.4",
+    "npm": "5.4.1"
   }
 }
